--- a/generate_feedback_report.Rmd
+++ b/generate_feedback_report.Rmd
@@ -28,7 +28,7 @@ library(qgraph)
 library(scales)
 
 # some parameters to set: 
-participant_code <- "UKK1VIZYZWFDBOBL" # participant code (in "")
+participant_code <- "UKK1VIZYODYWRZBQ" # participant code (in "")
 
 alpha <-
   .01 # significance level for thresholding in networks
@@ -52,7 +52,7 @@ getPersonalizedModel <-
           dayvar = dayvar,
           verbose = TRUE,
           standardize = "z",
-          optimizer = "nlminb",
+          optimizer = "ucminf",
           estimator = "FIML") %>% runmodel %>% prune(alpha = alpha, recursive = F, adjust = "none", startreduce = 0.95) %>% stepup(alpha = alpha)
         # modelsearch(prunealpha = alpha, addalpha = alpha) 
         return(model_pruned)
