--- a/generate_feedback.Rmd
+++ b/generate_feedback.Rmd
@@ -28,7 +28,7 @@ library(qgraph)
 library(scales)
 
 # some parameters to set: 
-participant_code <- "UKK1VIZYPEZHISKX" # participant code (in "")
+participant_code <- "UKK1VIZYAPDARYCY" # participant code (in "")
 
 alpha <-
   .01 # significance level for thresholding in networks
@@ -173,7 +173,7 @@ constant_var <- data %>%
   filter(Participant_ID == participant_id) %>%
   rename_at(vars(matches("-1-0")), ~ all_vars) %>%
   summarise(across(matches("var"), ~ length(unique(.)))) %>%
-  select(which(. <= 2)) %>%
+  select(which(. <= 4)) %>%
   colnames(.)
 
 # if there is any completely constant variable, we remove it for computation of the networks
@@ -230,7 +230,7 @@ model_personalized <- data %>%
 contemporaneous_network <-
   getmatrix(model_personalized, "omega_zeta")
 
-position_constant_var <- which(all_vars == constant_var)
+position_constant_var <- match(constant_var, all_vars)
 
 if(length(position_constant_var) >= 1) {
   new_mat <- matrix(0, nrow = 10, ncol = 10)
